kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-starter
  namespace: nest-starter
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nest-starter
